--- a/SkyDreaming/Views/Angel/Edit.cshtml
+++ b/SkyDreaming/Views/Angel/Edit.cshtml
@@ -1,9 +1,8 @@
 ﻿@model SkyDreaming.Models.Angel
 @using SkyDreaming.Models.Enums
-@using SkyDreaming.Models
 
 
-<h1>Create an Angel</h1>
+<h1>Edit an Angel</h1>
 
 <form method="post" class="form-group">
     @Html.AntiForgeryToken()
@@ -23,11 +22,11 @@
     </div>
     @Html.ValidationMessageFor(m => m.Kg, "", new { @class = "text-danger" })
 
-    <div class="form-group">
-        @Html.LabelFor(m => m.Height)
-        @Html.EditorFor(m => m.Height, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(m => m.Height, "", new { @class = "text-danger" })
-    </div>
+<div class="form-group">
+    @Html.LabelFor(m => m.Height)
+    @Html.EditorFor(m => m.Height, new { htmlAttributes = new { @class = "form-control" } })
+    @Html.ValidationMessageFor(m => m.Height, "", new { @class = "text-danger" })
+</div>
 
     <div class="form-group">
         @Html.LabelFor(m => m.HairColor)
@@ -75,17 +74,8 @@
         <input id="imageurl" class="form-control" type="url" name="ImageUrl" value="@(Model?.ImageUrl)" />
     </div>
     @Html.ValidationMessageFor(m => m.ImageUrl, "", new { @class = "text-danger" })
-
-    <select name="roomId">
-        @foreach (var item in ViewBag.Rooms as List<Room>)
-        {
-            <option value="@item.Id"> @item.Name</option>
-        }
-    </select>
-
-
     <div class="form-group">
-        <input class="btn btn-primary" type="submit" value="Create" />
+        <input class="btn btn-primary" type="submit" value="Edit" />
         <input class="btn btn-success" type="reset" value="Clear" />
     </div>
 </form>
