--- a/SkyDreaming/Views/Angel/Create.cshtml
+++ b/SkyDreaming/Views/Angel/Create.cshtml
@@ -76,12 +76,15 @@
     </div>
     @Html.ValidationMessageFor(m => m.ImageUrl, "", new { @class = "text-danger" })
 
-    <select name="roomId">
+<label id="project">Select Room</label>
+<div class="form-group">
+    <select name="roomId" class="form-control">
         @foreach (var item in ViewBag.Rooms as List<Room>)
         {
             <option value="@item.Id"> @item.Name</option>
         }
     </select>
+</div>
 
 
     <div class="form-group">
@@ -89,3 +92,6 @@
         <input class="btn btn-success" type="reset" value="Clear" />
     </div>
 </form>
+
+@*<a class="btn btn-success" href="/Angel/Index">Go Back</a>*@
+@Html.ActionLink("Go Back", "Index", null,new {@class="btn btn-success"}) 
