--- a/SkyDreaming/Views/Room/Index.cshtml
+++ b/SkyDreaming/Views/Room/Index.cshtml
@@ -38,7 +38,7 @@
                     @room.Cost
                 </td>
                 <td>
-                    <img width="200" src="@room.UrlImage" />
+                    <img width="120" height="100" src="@room.UrlImage" />
                 </td>
                 <td>
                     <ul>
