--- a/SkyDreaming/Views/IGmodel/Details.cshtml
+++ b/SkyDreaming/Views/IGmodel/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model  SkyDreaming.Models.Angel
+﻿@model  SkyDreaming.Models.IGmodel
 
 
 <img src="@Model.ImageUrl" width="300" alt="Alternative text" />
@@ -19,4 +19,4 @@
 <span>@Model.HairColor</span>
 <br />
 <br />
-<a class="btn btn-info"href="/Angel/Index">Go Back</a>
+<a class="btn btn-info"href="/IGmodel/Index">Go Back</a>
