--- a/SkyDreaming/Views/Room/Index.cshtml
+++ b/SkyDreaming/Views/Room/Index.cshtml
@@ -21,7 +21,7 @@
             <th>
             </th>
             <th>
-                Angels
+                IGmodels
             </th>
             <th></th>
         </tr>
@@ -42,7 +42,7 @@
                 </td>
                 <td>
                     <ul>
-                        @foreach (var ang in room.Angels)
+                        @foreach (var ang in room.IGmodels)
                         {
                             <li>@ang.Name</li>
                         }
