--- a/SkyDreaming/Views/Shared/_Layout.cshtml
+++ b/SkyDreaming/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Angels", "Index", "Angel")</li> @*θα γράφει Angels, θα με πηγαίνει στη μέθοδο Index του Angel controller*@
+                    <li>@Html.ActionLink("IGmodels", "Index", "IGmodel")</li> @*θα γράφει IGmodels, θα με πηγαίνει στη μέθοδο Index του IGmodel controller*@
                     <li>@Html.ActionLink("Rooms", "Index", "Room")</li>
                 </ul>
             </div>
