--- a/SkyDreaming/Views/IGmodel/Index.cshtml
+++ b/SkyDreaming/Views/IGmodel/Index.cshtml
@@ -57,7 +57,7 @@
             <th>Height</th>
             <th>HairColor</th>
             <th>Age</th>
-            <th>Room</th>
+            <th>product</th>
             <th>Options</th>
         </tr>
     </thead>
@@ -74,7 +74,7 @@
                     <td>@ang.Height</td>
                     <td>@ang.HairColor</td>
                     <td>@ang.Age</td>
-                    <td>@ang.Room.Name</td>
+                    <td>@ang.product.Name</td>
                     <td>
                         <a class="btn btn-primary" href="/IGmodel/Edit?id=@ang.Id">Edit</a>
                         @*<a class="btn btn-danger" href="/IGmodel/Delete?id=@ang.Id">Delete</a>*@
@@ -97,7 +97,7 @@
                     <td>@ang.Height</td>
                     <td>@ang.HairColor</td>
                     <td>@ang.Age</td>
-                    <td>@ang.Room.Name</td>
+                    <td>@ang.product.Name</td>
                     <td>
                         <a class="btn btn-primary" href="/IGmodel/Edit?id=@ang.Id">Edit</a>
                         @*<a class="btn btn-danger" href="/IGmodel/Delete?id=@ang.Id">Delete</a>*@
