--- a/SkyDreaming/Views/Shared/_Layout.cshtml
+++ b/SkyDreaming/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("IGmodels", "Index", "IGmodel")</li> @*θα γράφει IGmodels, θα με πηγαίνει στη μέθοδο Index του IGmodel controller*@
-                    <li>@Html.ActionLink("Rooms", "Index", "Room")</li>
+                    <li>@Html.ActionLink("products", "Index", "product")</li>
                 </ul>
             </div>
         </div>
