--- a/SkyDreaming/Views/Product/Create.cshtml
+++ b/SkyDreaming/Views/Product/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SkyDreaming.Models.Room
+﻿@model SkyDreaming.Models.product
 
 @{
     ViewBag.Title = "Create";
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Room</h4>
+        <h4>product</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
