--- a/SkyDreaming/Views/Product/Delete.cshtml
+++ b/SkyDreaming/Views/Product/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model SkyDreaming.Models.Room
+﻿@model SkyDreaming.Models.product
 
 @{
     ViewBag.Title = "Delete";
@@ -22,7 +22,7 @@
 
 
 <div>
-    <h4>Room</h4>
+    <h4>product</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
