--- a/SkyDreaming/Views/Product/Details.cshtml
+++ b/SkyDreaming/Views/Product/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model SkyDreaming.Models.Room
+﻿@model SkyDreaming.Models.product
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Room</h4>
+    <h4>product</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
